@startuml

entity Host {
    id
    title
    url
    memo
}

' --------------------------------------------------
' crawl data
' --------------------------------------------------
package Search {
    entity tag {
        id
        dictionary_id
        name
    }

    entity page {
        id
        dictionary_id
        title
        url
    }

    entity page_attribute {
        id
        page_id
        key
        value
        type
    }
}

' --------------------------------------------------
' crawl query
' --------------------------------------------------
package Crawl {
    entity crawl_list_query {
        id
        dictionary_id

        ' path & query
        listing_page_path
        detail_link_parent_node_query
        detail_link_item_node_query
    }

    entity crawl_detail_query {
        id
        dictionary_id

        ' for fetch detail item
        detail_attribute_node_query
    }
}

Host "1" *--  "0..n" tag
Host "1" *-- "1..n" page
page o-- page_attribute
Host "1" *-- "1" crawl_list_query
Host "1" <-- "0..n" crawl_detail_query

@enduml